Fix Mex placer base mex collision and use vectors over spawns in MapMaskMethods